# workshop-validation

./: .gitignore  README.md  some-numbers.txt  workshop-validation.cabal
ex1/: Main.hs
ex2/: Main.hs
ex3/: Main.hs
ex4/: Main.hs
ex5/: Main.hs
